vistas para admin

--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
+NODE_ENV = 'production'
 PORT = '8080'
 MONGO_URI = "mongodb+srv://bsanchezcavanna:lJkVJFQEsEcyKtOh@codercluster.sukhsuw.mongodb.net/ecommerce?retryWrites=true&w=majority"
 SECRET_KEY = 'elefante'
 SESSION_KEY = 'cookieToken'
-MAILING_SERVICE = ''
-MAILING_USER = 'kamryn.jones@ethereal.email'
-MAILING_PASSWORD = 'sxM4JgjvwHFvA2Tq175'
+MAILING_SERVICE = 'gmail'
+MAILING_USER = 'bsanchezcavanna@gmail.com'
+MAILING_PASSWORD = 'ezpegrwgedqtmkbd'
 GITHUB_CLIENT_ID = "Iv1.e21216c8af583bc7"
 GITHUB_SECRET = "3b0df5dbc46d5f089f46851664ef39f5ce4979f9"
 GITHUB_CALLBACK_URL = "http://localhost:8080/api/sessions/github/authentication"
+TICKET_KEY = 'ticketID'
