--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+NODE_ENV = 'AMBIENTE DE DESARROLLO'
 PORT = 'PUERTO'
 MONGO_URI = "URI_MONGO"
 SECRET_KEY = 'CLAVE_SECRETA'
 SESSION_KEY = 'NOMBRE_SESION'
+MAILING_SERVICE = 'SERVICIO_MAILING'
+MAILING_USER = 'USUARIO_MAILING'
+MAILING_PASSWORD = 'CLAVE_MAILING'
+GITHUB_CLIENT_ID = "ID_CLIENTE_GITHUB"
+GITHUB_SECRET = "CLAVE_GITHUB"
+GITHUB_CALLBACK_URL = "URL_CALLBACK_GITHUB"
+TICKET_KEY = 'ID_TICKET_COMPRA'
