--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -13,6 +13,10 @@ paths:
                 $ref: '#components/schemas/ProductsResponse'
         "500":
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/500ErrorResponse'
 
     post:
       tags:
@@ -33,8 +37,16 @@ paths:
                 $ref: '#components/schemas/ProductResponse'
         "400":
           description: Invalid Body format
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/400ErrorResponse'
         "500":
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/500ErrorResponse'
 
   /api/products/{productId}:
     get:
@@ -57,8 +69,16 @@ paths:
                 $ref: '#components/schemas/ProductResponse'
         "404":
           description: Product Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/404ErrorResponse'
         "500":
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/500ErrorResponse'
     
     put:
       tags:
@@ -86,10 +106,22 @@ paths:
                 $ref: '#components/schemas/ProductResponse'
         "400":
           description: Invalid Body format
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/400ErrorResponse'
         "404":
           description: Product Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/404ErrorResponse'
         "500":
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/500ErrorResponse'
 
     delete:
       tags:
@@ -111,9 +143,16 @@ paths:
                 $ref: '#components/schemas/ProductResponse'
         "404":
           description: Product Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/404ErrorResponse'
         "500":
           description: Internal Server Error
-
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/500ErrorResponse'
 
 components:
   schemas:
@@ -172,6 +211,51 @@ components:
           description: Product response status
         payload:
             $ref: '#components/schemas/Product'
+
+    400ErrorResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          enum: [error]
+          description: Error response status
+        payload:
+          type: object
+          properties:
+            statusCode:
+              enum: [400]
+            error:
+              enum: [Bad Request]
+
+    404ErrorResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          enum: [error]
+          description: Error response status
+        payload:
+          type: object
+          properties:
+            statusCode:
+              enum: [404]
+            error:
+              enum: [Not Found]
+
+    500ErrorResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          enum: [error]
+          description: Error response status
+        payload:
+          type: object
+          properties:
+            statusCode:
+              enum: [500]
+            error:
+              enum: [Internal Server Error]
 
   requestBodies:
     ProductPayload:
